# Interactive-Lab-Hub

./: .gitignore  .gitmodules  README.md
Final Project/: .default.env  .gitignore  README.md  led_control.service  notes.md  plan.md  project_description.md  pyproject.toml  requirements.txt
Final Project/embedded/: .default.env  .gitignore  README.md  display.service  led_control.service
Final Project/embedded/src/: accel.py  config.py  lights.py  main.py  weather.py  weather_enum.py
Final Project/preprocess/: .default.env  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
Final Project/preprocess/src/: config.py  handler.py  weather.py  weather_enum.py
Final Project/src/: accel.py  control.py  lights.py  main.py  weather.py
Lab 1/: README.md  exercise.py
Lab 1/RoseTransit/: .gitignore  api.h  makefile  platformio.ini
Lab 1/RoseTransit/include/: config.h  gtfs-realtime.pb.c  gtfs-realtime.pb.h
Lab 1/RoseTransit/src/: main.cpp
Lab 1/embedded/: .gitignore  README.md  platformio.ini
Lab 1/embedded/src/: main.cpp
Lab 1/lambda/: .eslintrc.js  .gitignore  README.md  build_zip.sh  index.ts  package.json  tsconfig.json
Lab 2/: README.md  binary_clock.py  colorbar_clock.py  colors_clock.py  partslist.md  prep.md  screen_clock.py
Lab 3/: .gitignore  README.md  ask_how_many_pets.sh  detect_colors.py  get_number.py  greeting.sh
Lab 4/: README.md
Lab 4/src/: index.html  main.css  pi_control.py
Lab 5/: README.md
Lab 6/: README.md  box_opener.py  color.py  display_color.py  distributed_twizzlers_sender.py  joystick.py
(+4 files in other folders)
