[tool.poetry]
name = "lightbrella"
version = "0.1.0"
description = "umbrella showing the weather"
authors = ["Joshua <jschmidtnj@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
python-dotenv = "^0.19.2"
adafruit-circuitpython-mpu6050 = "^1.1.9"
rpi-ws281x = "^4.3.1"
loguru = "^0.5.3"
colormath = "^3.0.0"
webcolors = "^1.11.1"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
